--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
   "files": "simplex-noise.js",
   "devDependencies": {
     "alea": "0.0.9",
-    "benchmark": "~2.1.4",
-    "chai": "^4.2.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "mocha": "^5.2.0"
+    "@babel/core": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "babel-preset-minify": "^0.5.0",
+    "core-js": "^2.6.9",
+    "rollup": "^1.12.4",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-babel-minify": "^8.0.0",
+    "rollup-plugin-cleanup": "^3.1.1"
   },
   "bugs": {
     "url": "https://github.com/jwagner/simplex-noise.js/issues"
